chore(goview): upload_image_api_updated